change title home page

--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -1,7 +1,7 @@
 
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Inicio{% endblock title%}
+{% block title %}Inicio - Observatorio Aysen{% endblock title%}
 
 {% block content %}
 <div id='divHome'>
