--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -4,9 +4,11 @@
 {% block title %}Inicio - Observatorio Aysen{% endblock title%}
 
 {% block content %}
-<div id='divHome'>
+<div class='row'>
+	<div class="col s12">
 	<h4>Bienvenido al Observatorio Laboral de Aysen</h4>
 	<p>El Observatorio Laboral de Aysen (OLA) se enmarca en un proyecto nacional de instalación de observatorios laborales en todas las regiones del país. En términos operativos el trabajo del OLA se realiza de acuerdo a los lineamientos del Observatorio Nacional, instancia que define los productos y las metodologías de trabajo, y al mismo tiempo apoya y monitorea la instalación de los observatorios en las regiones.</p>
-
+	</div>
 </div>
+
 {% endblock content %}	
