--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -16,8 +16,9 @@
 </head>
 
 <body >
-  <!--   
-  <img src="{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}" id='imgBanner'>  
+   <DIV class="CONTAINER">
+  <img class="responsive-img" src="{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}" id='imgBanner'>  
+  </DIV>
   <!-- menu inicial -->
 
   
@@ -25,39 +26,39 @@
 
   <div class='container'>
     <ul id="dropdown1" class="dropdown-content">
-      <li><a href="#!">MISION Y OBJETIVOS</a></li>
-      <li><a href="#!">CONSEJO ASESOR</a></li>
+      <li><a class='grey-text text-darken-3' href="#!">MISION Y OBJETIVOS</a></li>
+      <li><a class='grey-text text-darken-3' href="#!">CONSEJO ASESOR</a></li>
     </ul>
     <nav>
       <div class="nav-wrapper">
         <a href="#!" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="center hide-on-med-and-down">
-          <li><a href="{% url 'gui:home'%}">INICIO</a></li>
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">QUIÉNES SOMOS<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li><a href="badges.html">PANORAMA REGIONAL</a></li>
-          <li><a href="collapsible.html">OCUPACIONES</a></li>
-          <li><a href="mobile.html">NOTICIAS</a></li>
-          <li><a href="mobile.html">CONTACTO</a></li>
+          <li><a class='grey-text text-darken-3' href="{% url 'gui:home'%}">INICIO</a></li>
+          <li><a class="dropdown-button grey-text text-darken-3" href="#!" data-activates="dropdown1">QUIÉNES SOMOS<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class='grey-text text-darken-3' href="badges.html">PANORAMA REGIONAL</a></li>
+          <li><a class='grey-text text-darken-3' href="collapsible.html">OCUPACIONES</a></li>
+          <li><a class='grey-text text-darken-3' href="mobile.html">NOTICIAS</a></li>
+          <li><a class='grey-text text-darken-3' href="mobile.html">CONTACTO</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="{% url 'gui:home'%}">INICIO</a></li>
+          <li><a class='grey-text text-darken-3' href="{% url 'gui:home'%}">INICIO</a></li>
           <li class="no-padding">
             <ul class="collapsible collapsible-accordion">
               <li>
-                <a class="collapsible-header">QUIÉNES SOMOS<i class="mdi-navigation-arrow-drop-down"></i></a>
+                <a class="collapsible-header class='grey-text text-darken-3'">QUIÉNES SOMOS<i class="mdi-navigation-arrow-drop-down"></i></a>
                 <div class="collapsible-body">
                   <ul>
-                    <li><a href="#!">MISION Y OBJETIVOS</a></li>
-                    <li><a href="#!">CONSEJO ASESOR</a></li>
+                    <li><a class='grey-text text-darken-3' href="#!">MISION Y OBJETIVOS</a></li>
+                    <li><a class='grey-text text-darken-3' href="#!">CONSEJO ASESOR</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </li>
-          <li><a href="badges.html">PANORAMA REGIONAL</a></li>
-          <li><a href="collapsible.html">OCUPACIONES</a></li>
-          <li><a href="mobile.html">NOTICIAS</a></li>
-          <li><a href="mobile.html">CONTACTO</a></li>
+          <li><a class='grey-text text-darken-3' href="badges.html">PANORAMA REGIONAL</a></li>
+          <li><a class='grey-text text-darken-3' href="collapsible.html">OCUPACIONES</a></li>
+          <li><a class='grey-text text-darken-3' href="mobile.html">NOTICIAS</a></li>
+          <li><a class='grey-text text-darken-3' href="mobile.html">CONTACTO</a></li>
         </ul>
       </div>
     </nav>
@@ -65,48 +66,44 @@
 
     <div class="row">
       <div class="col s8">{% block content %}{% endblock %}</div>
-      <div class="col s4"><img src="{% static 'gui/img/rda.png' %}" id='imgMap'></div>
-    </div>
-    <div class="row">
-      <div class="col s8"></div>
-      <div class="col s4"><img src="{% static 'gui/img/sil.jpg' %}" id='sil'></div>
-    </div>
-    <div class="row">
-      <div class="col s8"></div>
-      <div class="col s4"><img src="{% static 'gui/img/obl.jpg' %}" id='obl'></div>
-    </div>
-    <div class="row">
-      <div class="col s8"></div>
-      <div class="col s4"><img src="{% static 'gui/img/bne.jpg' %}" id='bne'></div>
-    </div>
-    <div class="row">
-      <div class="col s8"></div>
-      <div class="col s4"><img src="{% static 'gui/img/ine.png' %}" id='ine.png'></div>
-    </div>
-    <div class="row">
-      <div class="col s8"></div>
-      <div class="col s4"><img src="{% static 'gui/img/contactanos.png' %}" id='contactanos'></div>
-    </div>
-    <div class="row">
-      <div class="col s8"></div>
-      <div class="col s4"><img src="{% static 'gui/img/bid.png' %}" id='bid'></div>
-    </div>
-  </div>
-  <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col s3"><img src="{% static 'gui/img/logos.png' %}" id='bid'></div>
-              <div class="col s3"><img src="{% static 'gui/img/obl.jpg' %}" id='obl'></div>
-              <div class="col s3"><img src="{% static 'gui/img/otic.png' %}" id='otic'></div>
-              <div class="col s3"><img src="{% static 'gui/img/logou.png' %}" id='logou'></div>
-            </div>
+      <div class="col s4">
+        <div class="row">
+          <div class="col s12">
+            <DIV CLASS='CARD-PANEL TEAL WHITE'>
+          <SPAN CLASS='RED-TEXT'>PRINCIPALES SECTORES PRODUCTIVOS POR REGIÓN</SPAN>
+          </DIV>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col s12">
+            <DIV CLASS='card-panel teal WHITE'>
+              <img src="{% static 'gui/img/rda.png' %}" id='imgMap'>
+            </DIV>
           </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
+        </div>
+        <div class="row">
+          <div class="col s12"><img src="{% static 'gui/img/sil.jpg' %}" id='sil'>
           </div>
-        </footer>
-</body>
-</html>
+        </div>
+
+
+        <div class="row">
+          <div class="col s12"><img src="{% static 'gui/img/bne.jpg' %}" id='bne'>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <footer class="page-footer">
+      <div >
+        <div class="row">
+          <div class="col s3"><img src="{% static 'gui/img/logos.png' %}" id='bid'></div>
+          <div class="col s3"><img src="{% static 'gui/img/obl.jpg' %}" id='obl'></div>
+          <div class="col s3"><img src="{% static 'gui/img/otic.png' %}" id='otic'></div>
+          <div class="col s3"><img src="{% static 'gui/img/logou.png' %}" id='logou'></div>
+        </div>
+      </div>
+    </footer>
+  </body>
+  </html>
