--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -65,8 +65,8 @@
     <!-- end menu -->
 
     <div class="row">
-      <div class="col s8">{% block content %}{% endblock %}</div>
-      <div class="col s4">
+      <div class="col s12 m12 l8">{% block content %}{% endblock %}</div>
+      <div class="col s12 m12 l4">
         <div class="row">
           <div class="col s12">
             <DIV CLASS='CARD-PANEL TEAL WHITE'>
@@ -77,31 +77,36 @@
         <div class="row">
           <div class="col s12">
             <DIV CLASS='card-panel teal WHITE'>
-              <img src="{% static 'gui/img/rda.png' %}" id='imgMap'>
+              <img class="responsive-img" src="{% static 'gui/img/rda.png' %}" id='imgMap'>
             </DIV>
           </div>
         </div>
         <div class="row">
-          <div class="col s12"><img src="{% static 'gui/img/sil.jpg' %}" id='sil'>
+          <div class="col s12"><img class="responsive-img" src="{% static 'gui/img/sil.jpg' %}" id='sil'>
           </div>
         </div>
 
 
         <div class="row">
-          <div class="col s12"><img src="{% static 'gui/img/bne.jpg' %}" id='bne'>
+          <div class="col s12"><img class="responsive-img" src="{% static 'gui/img/bne.jpg' %}" id='bne'>
           </div>
         </div>
       </div>
     </div>
 
 
-    <footer class="page-footer">
-      <div >
+    <footer>
+      
+      <div class='card-panel white' id='footerDiv'>
         <div class="row">
-          <div class="col s3"><img src="{% static 'gui/img/logos.png' %}" id='bid'></div>
-          <div class="col s3"><img src="{% static 'gui/img/obl.jpg' %}" id='obl'></div>
-          <div class="col s3"><img src="{% static 'gui/img/otic.png' %}" id='otic'></div>
-          <div class="col s3"><img src="{% static 'gui/img/logou.png' %}" id='logou'></div>
+        <div class="col s5 "><div class="card-panel blue franjaDerecha"></div></div>
+        <div class="col s7 "><div class="card-panel red franjaIzquierda"></div></div>
+      </div>
+        <div class="row">
+          <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/logos.png' %}" id='bid'></div>
+          <div class="col s6 m6 l3"></div>
+          <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/otic.png' %}" id='otic'></div>
+          <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/logou.png' %}" id='logou'></div>
         </div>
       </div>
     </footer>
