--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -13,7 +13,7 @@
 </div>
 <div class="row">
 	<div class="col s12">
-		<div class="blue-text"><h5>Principales Ocupaciones</h5></div>
+		<div><h5>Principales Ocupaciones</h5></div>
 	</div>
 </div>
 <div class="row">
