--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'base_home.html' %}
 {% load static %}
 {% block title %}Consejo Asesor - Observatorio Aysen{% endblock title%}
 
-{% block content %}
+{% block content_home %}
 <div class="row">
 	<div class="col s12"><a href="{% url 'gui:home' %}">INICIO /</a><a href="#"> CONSEJO ASESOR >></a></div>
 	<div class="col s3"></div>	
@@ -22,4 +22,4 @@
 		</div>
 	</div>
 </div>
-{% endblock content%}
+{% endblock content_home %}
