--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -61,36 +61,9 @@
     </div>
   </nav>
   <!-- end menu -->
+  {% block content %}{% endblock %}
   <!-- begin content base with right panel and footer page -->
-  <div class="row">
-    <div class="col s12 m12 l8">{% block content %}{% endblock %}</div>
-    <div class="col s12 m12 l4">
-      <div class="row">
-        <div class="col s12">
-          <DIV CLASS='CARD-PANEL TEAL WHITE'>
-            <SPAN CLASS='RED-TEXT'>PRINCIPALES SECTORES PRODUCTIVOS POR REGIÓN</SPAN>
-          </DIV>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12">
-          <DIV CLASS='card-panel teal WHITE'>
-            <img class="responsive-img" src="{% static 'gui/img/rda.png' %}" id='imgMap'>
-          </DIV>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12"><img class="responsive-img" src="{% static 'gui/img/sil.jpg' %}" id='sil'>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col s12"><img class="responsive-img" src="{% static 'gui/img/bne.jpg' %}" id='bne'>
-        </div>
-      </div>
-    </div>
-  </div>
+ 
   <footer>
     <div class='card-panel white' id='footerDiv'>
       <div class="row">
