--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -1,9 +1,9 @@
 
-{% extends 'base.html' %}
+{% extends 'base_home.html' %}
 {% load static %}
 {% block title %}Inicio - Observatorio Aysen{% endblock title%}
 
-{% block content %}
+{% block content_home %}
 <div class='row'>
 	<div class="col s12">
 		<h4>Bienvenido al Observatorio Laboral de Aysen</h4>
@@ -20,7 +20,7 @@
 <div class="row hide-on-med-and-down">
 	<div class="col s12">
 		<div class="card-panel white">
-			<table class='bordered centered'>
+			<table class='bordered centered' id='principal_activities'>
 				<thead>
 					<tr>
 						<th></th>
@@ -212,4 +212,4 @@
 </div>
 
 
-{% endblock content %}	
+{% endblock content_home %}	
