--- a/gui/templates/team.html
+++ b/gui/templates/team.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'base_home.html' %}
 {% load static %}
 {% block title %}Equipo - Observatorio Aysen{% endblock title%}
 
-{% block content %}
+{% block content_home %}
 <div class="row">
 	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Equipo >></a></div>
 	<div class="col s3"></div>	
@@ -23,4 +23,4 @@
 		</div>
 	</div>
 </div>
-{% endblock content%}
+{% endblock content_home %}
