added downloads to panorama.html

--- a/gui/templates/sectors.html
+++ b/gui/templates/sectors.html
@@ -1,10 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'base_home.html' %}
 {% load static %}
 {% block title %}Sectores - Observatorio Aysen{% endblock title%}
 
-{% block content %}
+{% block content_home %}
 <div class="row">
-	<p>hola mundo sectores</p>
+	<div class="col s12">
+	<h4>Sectores</h4>
+	<p>Actualmente se están priorizando los sectores de la región y pronto se elaborarán reportes de los sectores priorizados.</p>
+	</div>
 </div>
 
-{% endblock content%}
+{% endblock content_home %}
