--- a/gui/templates/panorama.html
+++ b/gui/templates/panorama.html
@@ -327,6 +327,41 @@
   </ul>
 </div>
 </div>
+<!-- div download -->
+    <div class="row"><div class="col s12">
+    <ul class="collapsible" data-collapsible="accordion">
+      <li class='blue'>
+        <div class="collapsible-header blue">
+         <div class="row">
+          <div class="col s4">
+            <br>
+          </div>
+          <div class="col s8">
+            <div class="row">
+              <div class="col s12">
+                <h5 class='white-text'>Descargar</h5>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <p class='white-text'>Descargar informes en formato pdf</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="collapsible-body">
+        <div class='row'>
+          <div class="col s12" id='download'>
+            <a href="{% static 'gui/docs/InformeRegional.pdf' %}">Descargar el pdf con el detalle del informe regional.</a><br>
+            <a href="{% static 'gui/docs/Boletin-OLAB-29-09.pdf' %}">Descargar pdf con el boletín trimestre Abril - Junio 2016</a><br>
+            <a href="{% static 'gui/docs/Boletin-2-OLAB-julio_septiembre-2016.pdf' %}">Descargar pdf con el boletín trimestre Julio - Septiembre 2016</a>
+          </div>
+        </div>
+      </div>
+    </li>
+  </ul>
+  </div></div>
 </div><!-- end div left side -->
 
 
